Center save/cancel buttons

--- a/index.html
+++ b/index.html
@@ -108,9 +108,27 @@
                 <div class="settings-section-title">Locations</div>
                 <div class="settings-list" id="settings-location-list"></div>
             </div>
+
+            <div class="settings-section">
+                <div class="settings-section-title">About</div>
+                <div class="settings-list">
+                    <div class="settings-row" onclick="alert('Contact Us clicked')">
+                        <span class="settings-label">Contact us</span>
+                        <span class="settings-arrow">›</span>
+                    </div>
+                    <div class="settings-row" onclick="alert('Privacy Policy clicked')">
+                        <span class="settings-label">Privacy policy</span>
+                        <span class="settings-arrow">›</span>
+                    </div>
+                    <div class="settings-row" onclick="alert('System Permissions clicked')">
+                        <span class="settings-label">System permissions</span>
+                        <span class="settings-arrow">›</span>
+                    </div>
+                </div>
+            </div>
             
             <div style="text-align: center; margin-top: 30px; color: var(--text-secondary); font-size: 13px;">
-                AQI Alarm v0.5.3<br>Powered by Open-Meteo
+                AQI Alarm v0.5.4<br>Powered by Open-Meteo
             </div>
         </div>
     </div>
