Add edit/delete alarm capability

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <div id="add-modal" class="modal-overlay">
         <div class="modal-content">
-            <div class="modal-header">New Alarm</div>
+            <div class="modal-header" id="modal-title">New Alarm</div>
             <div class="modal-body">
                 <div class="form-group">
                     <label class="form-label">Time</label>
