--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
             
             <div style="text-align: center; margin-top: 30px; color: var(--text-secondary); font-size: 13px;">
-                AQI Alarm v0.5.5<br>Powered by Open-Meteo
+                AQI Alarm v0.6<br>Powered by Open-Meteo
             </div>
         </div>
     </div>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-label">Location of reading</label>
-                    <select id="new-location-select" class="form-select"></select>
+                    <select id="new-location-select" class="form-select" onchange="handleLocationSelectChange(this)"></select>
                 </div>
                 
                 <div class="form-group">
