--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="icon-btn" onclick="openSettings()">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <circle cx="12" cy="12" r="3"></circle>
-                <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
+                <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
             </svg>
         </button>
         <button class="icon-btn" onclick="openAddMenu()">
@@ -135,7 +135,7 @@
             </div>
             
             <div style="text-align: center; margin-top: 30px; color: var(--text-secondary); font-size: 13px;">
-                AQI Alarm v0.9.1<br>Powered by Open-Meteo & WAQI
+                AQI Alarm v0.9.5<br>Powered by Open-Meteo & WAQI
             </div>
         </div>
     </div>
@@ -189,6 +189,37 @@
                         <option value="siren">Siren</option>
                     </select>
                 </div>
+
+                <div class="form-group" style="margin-top: 20px;">
+                    <div class="settings-row" style="padding: 0; border: none;">
+                        <span class="form-label" style="margin: 0; font-size: 14px;">Snooze</span>
+                        <label class="switch">
+                            <input type="checkbox" id="new-snooze-toggle" onchange="toggleSnoozeOptions()">
+                            <span class="slider"></span>
+                        </label>
+                    </div>
+                </div>
+
+                <div id="snooze-options" style="display: none; padding-left: 10px; border-left: 2px solid var(--separator-color); margin-bottom: 20px;">
+                    <div class="form-group" style="margin-top: 15px;">
+                        <label class="form-label">Snooze Duration (Minutes)</label>
+                        <input type="number" id="new-snooze-duration" class="form-input" value="9">
+                    </div>
+                    
+                    <div class="form-group">
+                        <div class="settings-row" style="padding: 0; border: none;">
+                            <span class="form-label" style="margin: 0; font-size: 14px;">Retain Alarm Settings</span>
+                            <label class="switch">
+                                <input type="checkbox" id="new-snooze-retain" checked>
+                                <span class="slider"></span>
+                            </label>
+                        </div>
+                        <div style="font-size: 12px; color: var(--text-secondary); margin-top: 8px; line-height: 1.4;">
+                            If enabled, the snoozed alarm will only sound if air quality conditions are still met. If disabled, it rings regardless.
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="modal-actions">
                 <button class="btn-pill cancel" onclick="closeAddAlarm()">Cancel</button>
@@ -223,7 +254,7 @@
                 Good
             </div>
 
-            <button class="btn-snooze" onclick="snoozeAlarm()">Snooze (9 min)</button>
+            <button id="btn-snooze" class="btn-snooze" onclick="snoozeAlarm()">Snooze</button>
             <button class="btn-stop-alarm" onclick="stopAlarm()">Stop</button>
         </div>
     </div>
