--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="icon-btn" onclick="openSettings()">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <circle cx="12" cy="12" r="3"></circle>
-                <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
+                <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 0 2.83 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
             </svg>
         </button>
         <button class="icon-btn" onclick="openAddMenu()">
@@ -60,6 +60,23 @@
             <div class="settings-section">
                 <div class="settings-section-title">General</div>
                 <div class="settings-list">
+                    <div class="settings-row">
+                        <span class="settings-label">Primary Index</span>
+                        <select id="setting-primary-index" class="form-select settings-select" onchange="updatePrimaryIndex(this.value)">
+                            <option value="aqi" selected>AQI (Overall)</option>
+                            <option value="pm25">PM2.5</option>
+                            <option value="pm10">PM10</option>
+                            <option value="no2">NO2</option>
+                            <option value="so2">SO2</option>
+                            <option value="o3">Ozone</option>
+                            <option value="co">CO</option>
+                            <option disabled>---</option>
+                            <option value="temp">Temperature</option>
+                            <option value="wind">Wind Speed</option>
+                            <option value="humidity">Humidity</option>
+                        </select>
+                    </div>
+
                     <div class="settings-row">
                         <span class="settings-label">AQI Standard</span>
                         <select id="setting-aqi-std" class="form-select settings-select" onchange="updateAQIStandard(this.value)">
@@ -135,7 +152,7 @@
             </div>
             
             <div style="text-align: center; margin-top: 30px; color: var(--text-secondary); font-size: 13px;">
-                AQI Alarm v0.9.5<br>Powered by Open-Meteo & WAQI
+                AQI Alarm v1.0<br>Powered by Open-Meteo & WAQI
             </div>
         </div>
     </div>
@@ -152,16 +169,28 @@
                     <label class="form-label">Label</label>
                     <input type="text" id="new-label" class="form-input" placeholder="e.g. Morning Run">
                 </div>
+                
                 <div class="form-group">
-                    <label class="form-label">AQI Threshold</label>
+                    <label class="form-label">Condition</label>
+                    <select id="new-alarm-metric" class="form-select" style="margin-bottom: 10px;">
+                        <option value="aqi" selected>AQI (Overall)</option>
+                        <option value="pm25">PM2.5</option>
+                        <option value="pm10">PM10</option>
+                        <option value="no2">NO2</option>
+                        <option value="so2">SO2</option>
+                        <option value="temp">Temperature</option>
+                        <option value="wind">Wind Speed</option>
+                        <option value="humidity">Humidity</option>
+                    </select>
                     <div class="input-group-row">
                         <select id="new-aqi-op" class="form-select">
                             <option value="lt" selected>Below</option>
                             <option value="gt">Above</option>
                         </select>
-                        <input type="number" id="new-aqi" class="form-input" value="100" placeholder="150">
+                        <input type="number" id="new-aqi" class="form-input" value="100" placeholder="Value">
                     </div>
                 </div>
+
                 <div class="form-group">
                     <label class="form-label">Location of reading</label>
                     <select id="new-location-select" class="form-select" onchange="handleLocationSelectChange(this)"></select>
@@ -215,7 +244,7 @@
                             </label>
                         </div>
                         <div style="font-size: 12px; color: var(--text-secondary); margin-top: 8px; line-height: 1.4;">
-                            If enabled, the snoozed alarm will only sound if air quality conditions are still met. If disabled, it rings regardless.
+                            If enabled, the snoozed alarm will only sound if alarm conditions are still met. If disabled, it rings regardless.
                         </div>
                     </div>
                 </div>
